@@ -216,10 +216,10 @@ WHERE_AM_I = __addonpath__
 
 # Script doc constants
 __scriptname__ = "knewc"
-__version__ = '2.9.1'
+__version__ = '2.9.2'
 __author__ = 'emveepee'
 __original_author__ = 'Ton van der Poel'
-__date__ = '2020-12-03'
+__date__ = '2021-01-18'
 
 XBMC_DIALOG_BUSY_OPEN = "ActivateWindow(busydialognocancel)"
 XBMC_DIALOG_BUSY_CLOSE = "Dialog.Close(busydialognocancel)"
