@@ -1,3 +1,6 @@
+[B]2.9.2[/B]
+- Video OSD logging
+
 [B]2.9.1[/B]
 - Improved login logic
 - Relogin on session change
